# krita-pyramidalsharpening

./: CMakeLists.txt  PyramidalSharpening.cc  PyramidalSharpening.h  kritaPyramidalSharpening.desktop
